--- a/front-end/src/buttons.scss
+++ b/front-end/src/buttons.scss
@@ -1,5 +1,5 @@
 .btn{
-    @apply focus:ring-2 focus:outline-none font-medium rounded text-sm px-4 py-2 text-center me-2  text-white;
+    @apply focus:ring-2 focus:outline-none font-medium rounded text-sm px-4 py-2 text-center text-white;
 
     &.round{
         @apply rounded-full;
