chore(app): Update deps, login spinner, curl msg, view prep

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -18,7 +18,7 @@
  .input {
     @apply bg-transparent border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
     
-    &.dirty{
+    &.dirty:focus{
         @apply bg-green-50 border-green-500 text-green-900 dark:text-green-400 placeholder-green-700 dark:placeholder-green-500 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-green-500;
     }
 
